Fixed layout issues and got desired search functionality

--- a/assets/css/sass/screen.scss
+++ b/assets/css/sass/screen.scss
@@ -47,3 +47,15 @@ img.cr-logo,
 .pc-img-rounded{
   @include border-radius(3px);
 }
+
+
+
+
+//DEV CLASSES
+.red { background: red; }
+.blue {background: blue; }
+.green { background: green; }
+.orange {background: orange; }
+.grey { background: grey; }
+.purple { background: purple; }
+.yellow { background: yellow; }
